--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>
-							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#intro" class="active">Home</a></li>
+							<li><a href="#first">Blogs</a></li>
+							<li><a href="#second">Podcast</a></li>
+							<li><a href="#cta">Video</a></li>
 						</ul>
 					</nav>
 
@@ -57,7 +57,7 @@
 								</div>
 							</section>
 
-						<!-- First Section -->
+						<!-- Blogs -->
 							<section id="first" class="main special">
 								<header class="major">
 									<h2>Magna veroeros</h2>
@@ -86,7 +86,7 @@
 								</footer>
 							</section>
 
-						<!-- Second Section -->
+						<!-- Podcast -->
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Ipsum consequat</h2>
@@ -123,7 +123,7 @@
 								</footer>
 							</section>
 
-						<!-- Get Started -->
+						<!-- Video -->
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Congue imperdiet</h2>
@@ -153,17 +153,16 @@
 							<h2>Contacts</h2>
 							<dl class="alt">
 								<dt>Developer</dt>
-								<dd>Mary</dd>
+								<dd>Mary O.</dd>
 
 								<dt>Email</dt>
 								<dd><a href="#">maryvo@vt.edu</a></dd>
 							</dl>
 							<ul class="icons">
-								<li><a href="#" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-instagram alt"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon fa-dribbble alt"><span class="label">Dribbble</span></a></li>
+								<li><a href="#" class="icon fa-medium alt"><span class="label">Medium</span></a></li>
+								<li><a href="#" class="icon fa-soundcloud alt"><span class="label">SoundCloud</span></a></li>
 							</ul>
 						</section>
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
