--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 						<ul>
 							<li><a href="#intro" class="active">Home</a></li>
 							<li><a href="#first">Blogs</a></li>
-							<li><a href="#second">Podcast</a></li>
-							<li><a href="#cta">Video</a></li>
+							<li><a href="#second">Statistics</a></li>
+							<li><a href="#cta">Podcast/Video</a></li>
 						</ul>
 					</nav>
 
@@ -44,11 +44,13 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Ipsum sed adipiscing</h2>
+											<h2>Introduction to Literature</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>One of the biggest issues with the next generations is
+											the lack of emphasis on literacy. This is an issue in our
+											communities, across the state, country, and even the world.
+											 The ENGL 3844 group Leading in Literature has provided
+											 information about literacy for the public.</p>
 										<ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
@@ -60,22 +62,27 @@
 						<!-- Blogs -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>Blog Posts</h2>
 								</header>
 								<ul class="features">
 									<li>
 										<span class="icon major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Why should we care about literacy?</h3>
+										<p>Literacy isn't just about "being smart."</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Why should we help our students?</h3>
+										<p>Our students are the future, and our students are the now.</p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-diamond"></span>
-										<h3>Dolor nullam</h3>
+										<h3>How can we encourage our students to continue their learning?</h3>
+										<p>us veroeros sed consequat.</p>
+									</li>
+									<li>
+										<span class="icon major style5 fa-diamond"></span>
+										<h3>What is the biggest issue to overcome, and how can we make the biggest impact?</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 								</ul>
@@ -86,29 +93,29 @@
 								</footer>
 							</section>
 
-						<!-- Podcast -->
+						<!-- Statistics -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>Ipsum consequat</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Statistics</h2>
+									<p>There are many alarming statistics of people who are illiterate.
+										 Here are a few that really make a difference:</p>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
 										<span class="icon fa-code-fork"></span>
-										<strong>5,120</strong> Etiam
+										<strong>10%</strong> Adults in Montgomery County, Virginia
 									</li>
 									<li class="style2">
 										<span class="icon fa-folder-open-o"></span>
-										<strong>8,192</strong> Magna
+										<strong>12%</strong> Adults across the state of Virginia
 									</li>
 									<li class="style3">
 										<span class="icon fa-signal"></span>
-										<strong>2,048</strong> Tempus
+										<strong>14%</strong> Adults across the country
 									</li>
 									<li class="style4">
 										<span class="icon fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
+										<strong>13.7%</strong> People above the age of 15 across the world
 									</li>
 									<li class="style5">
 										<span class="icon fa-diamond"></span>
@@ -123,17 +130,19 @@
 								</footer>
 							</section>
 
-						<!-- Video -->
+						<!-- Podcast/Video -->
 							<section id="cta" class="main special">
 								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Podcast/Video</h2>
+									<p>ENGL 3844 group Leading in Literature produced a podcast
+										and a video as other outlets for advocating for literacy,
+										as well as providing additional resources to get started on
+									your quest to get involved in literacy!</p>
 								</header>
 								<footer class="major">
 									<ul class="actions">
-										<li><a href="generic.html" class="button special">Get Started</a></li>
 										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="generic.html" class="button special">Get Started</a></li>
 									</ul>
 								</footer>
 							</section>
