--- a/index.html
+++ b/index.html
@@ -59,21 +59,21 @@
 								</div>
 							</section>
 
-						<!-- Blogs -->
+						<!-- Blog Posts -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Blog Posts</h2>
+									<h2>Blog Posts on Medium</h2>
 								</header>
 								<ul class="features">
 									<li>
 										<span class="icon major style1 fa-code"></span>
-										<h3>Why should we care about literacy?</h3>
-										<p>Literacy isn't just about "being smart."</p>
+										<h3>What is literacy, and why should we care about it?</h3>
+										<p>Literacy isn't just about "being smart." <a href="https://medium.com/@maryvo/what-is-literacy-and-why-should-we-care-about-it-bda6fd77fb29">Read to find out more!"</a></p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
 										<h3>Why should we help our students?</h3>
-										<p>Our students are the future, and our students are the now.</p>
+										<p>Our students are the future, and our students are the now. <a href="https://medium.com/@maryvo/why-should-we-help-our-students-e99a00bc5a75">Read to find out more!</a></p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-diamond"></span>
