--- a/index.html
+++ b/index.html
@@ -51,9 +51,6 @@
 											communities, across the state, country, and even the world.
 											 The ENGL 3844 group Leading in Literature has provided
 											 information about literacy for the public.</p>
-										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
-										</ul>
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 								</div>
@@ -66,7 +63,7 @@
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon major style1 fa-code"></span>
+										<span class="icon major style3 fa-copy"></span>
 										<h3>What is literacy, and why should we care about it?</h3>
 										<p>Literacy isn't just about "being smart." <a href="https://medium.com/@maryvo/what-is-literacy-and-why-should-we-care-about-it-bda6fd77fb29">Read to find out more!"</a></p>
 									</li>
