--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon major style3 fa-copy"></span>
+										<span class="icon major style2 fa-copy"></span>
 										<h3>What is literacy, and why should we care about it?</h3>
 										<p>Literacy isn't just about "being smart." <a href="https://medium.com/@maryvo/what-is-literacy-and-why-should-we-care-about-it-bda6fd77fb29">Read to find out more!"</a></p>
 									</li>
@@ -73,12 +73,12 @@
 										<p>Our students are the future, and our students are the now. <a href="https://medium.com/@maryvo/why-should-we-help-our-students-e99a00bc5a75">Read to find out more!</a></p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-diamond"></span>
+										<span class="icon major style4 fa-copy"></span>
 										<h3>How can we encourage our students to continue their learning?</h3>
-										<p>us veroeros sed consequat.</p>
+										<p>Once we understand the importance of learning and literacy, we must instill the same ideas in the younger generations. <a href="https://medium.com/@maryvo/how-can-we-encourage-our-students-to-continue-their-learning-ded5257e703">Read to find out more!</a></p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-diamond"></span>
+										<span class="icon major style5 fa-copy"></span>
 										<h3>What is the biggest issue to overcome, and how can we make the biggest impact?</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
@@ -149,8 +149,8 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
+							<h2>Some Background</h2>
+							<p>Leading in Literature is a group that was formed in the ENGL 3844 class of the spring 2017 semester. We were tasked with coming up with a service-learning project for a cause we felt was important. Literacy is an issue that effects everyone worldwide, so we felt bringing this issue to the forefront of people's minds was going to be successful.</p>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn More</a></li>
 							</ul>
