--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">Home</a></li>
-							<li><a href="#first">Blogs</a></li>
+							<li><a href="#first">Resources</a></li>
 							<li><a href="#second">Statistics</a></li>
-							<li><a href="#cta">Podcast/Video</a></li>
+							<li><a href="#cta">Other</a></li>
 						</ul>
 					</nav>
 
@@ -56,36 +56,30 @@
 								</div>
 							</section>
 
-						<!-- Blog Posts -->
+						<!-- Resources -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Blog Posts on Medium</h2>
+									<h2>Resources</h2>
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon major style2 fa-copy"></span>
-										<h3>What is literacy, and why should we care about it?</h3>
-										<p>Literacy isn't just about "being smart." <a href="https://medium.com/@maryvo/what-is-literacy-and-why-should-we-care-about-it-bda6fd77fb29">Read to find out more!"</a></p>
+										<span class="icon major style2 fa-medium"></span>
+										<h3>Literacy Blogs on Medium</h3>
+										<p>Read to find out more about literacy and how to get everyone involved in the action! </p>
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>Why should we help our students?</h3>
-										<p>Our students are the future, and our students are the now. <a href="https://medium.com/@maryvo/why-should-we-help-our-students-e99a00bc5a75">Read to find out more!</a></p>
+										<span class="icon major style3 fa-soundcloud"></span>
+										<h3>Literacy podcast on SoundCloud</h3>
+										<p>Check out this podcast on getting more involved in literacy programs!</p>
 									</li>
 									<li>
-										<span class="icon major style4 fa-copy"></span>
-										<h3>How can we encourage our students to continue their learning?</h3>
-										<p>Once we understand the importance of learning and literacy, we must instill the same ideas in the younger generations. <a href="https://medium.com/@maryvo/how-can-we-encourage-our-students-to-continue-their-learning-ded5257e703">Read to find out more!</a></p>
-									</li>
-									<li>
-										<span class="icon major style5 fa-copy"></span>
-										<h3>What is the biggest issue to overcome, and how can we make the biggest impact?</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<span class="icon major style4 fa-youtube"></span>
+										<h3>Literacy video on YouTube</h3>
+										<p>Take a look at the video in literacy that incorporates different perspectives from the community!</a></p>
 									</li>
 								</ul>
 								<footer class="major">
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
 								</footer>
 							</section>
