--- a/index.html
+++ b/index.html
@@ -129,10 +129,6 @@
 									your quest to get involved in literacy!</p>
 								</header>
 								<footer class="major">
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-										<li><a href="generic.html" class="button special">Get Started</a></li>
-									</ul>
 								</footer>
 							</section>
 
@@ -141,11 +137,8 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Some Background</h2>
+							<h2>Some Background on the Project</h2>
 							<p>Leading in Literature is a group that was formed in the ENGL 3844 class of the spring 2017 semester. We were tasked with coming up with a service-learning project for a cause we felt was important. Literacy is an issue that effects everyone worldwide, so we felt bringing this issue to the forefront of people's minds was going to be successful.</p>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
-							</ul>
 						</section>
 						<section>
 							<h2>Contacts</h2>
