--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro" class="active">Home</a></li>
+							<li><a href="#intro" class="active">Introduction</a></li>
 							<li><a href="#first">Literacy Project</a></li>
 							<li><a href="#second">Statistics</a></li>
 							<li><a href="#cta">Resources</a></li>
@@ -148,10 +148,11 @@
 								<dd><a href="#">maryvo@vt.edu</a></dd>
 							</dl>
 							<ul class="icons">
-								<li><a href="#" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
 								<li><a href="#" class="icon fa-medium alt"><span class="label">Medium</span></a></li>
 								<li><a href="#" class="icon fa-soundcloud alt"><span class="label">SoundCloud</span></a></li>
+								<li><a href="#" class="icon fa-youtube alt"><span class="label">YouTube</span></a></li>
+
 							</ul>
 						</section>
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
