--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 									<li>
 										<span class="icon major style4 fa-youtube"></span>
 										<h3><a href="https://www.youtube.com/watch?v=TTAoL9RO4Fw">Literacy video on YouTube</a></h3>
-										<p>Take a look at the video in literacy that incorporates different perspectives from the community!</a></p>
+										<p>Take a look at the video on literacy incorporating different perspectives from the community!</a></p>
 									</li>
 								</ul>
 								<footer class="major">
